2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix autoconf warnings.

2010-03-08  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-authlib.spec: Make rmplint happy.

0.63.1

2010-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Remove the bundled libtdl library. Require the system-installed
	libltdl library.

2010-01-31  Brian Costello <dolemite@gmail.com>

	* authmysqllib.c (auth_mysql_setpass): Fix crash if DEFAULT_DOMAIN
	is not set in the config file.

0.63.0

2009-12-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* authldapescape.c: Factor out LDAP string escape function.

	* authldap.schema: Various fixes

	* authldap.ldif (olcObjectClasses): Create LDIF format schema from
	authldap.schema

2009-11-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* authoption.c (auth_getoptionenvint): For account options that
	are parsed to an int, an option value that begins with t, T, y, or Y
	is evaluated as 1, other alphabetic values as 0; so that 'true'
	or 'yes' get evaluated as 1.

0.62.4

2009-06-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Various compilation fixes for gcc 4.4 and libtool 2.2

0.62.3

2009-04-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-authlib.spec.in (MAKEFLAGS): Explicit path to ./configtmp

2009-03-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* README_authlib.sgml: Fixed documentation of authpipe AUTH command.

2009-02-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* authmigrate.in (rc): Add /etc/courier-imap

0.62.2

2009-02-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Makefile.am: Compatibility fix for bash 4

0.62.1

2008-12-25  Mr. Sam  <mrsam@courier-mta.com>

	* cryptpassword.c: Fix compiler warnings

	* checkpasswordsha1.c: Fix compiler warnings.

	* authldaplib.c (auth_ldap_enumerate): Fix typo.

0.62.0

2008-12-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* authpgsqllib.c: Use PQescapeStringConn() instead of removing all
	apostrophes from query parameters. This fixes a potential SQL injection