@@ -1,3 +1,9 @@
+2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix gcc 4.6 warnings
+
+	* courier.spec.in: switch to systemd.
+
 2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Fix autoconf warnings.
